<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/ivRegistroAtras2"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_backarrow"
        app:tint="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tvRecordarContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recordar"
        android:textColor="?attr/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/tvRecordarContra2"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:text="@string/textoRestablecerContra"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo electrónico"
        android:textColor="?attr/colorOutline"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/etContraOlvidadaEmail"
        app:layout_constraintStart_toStartOf="@+id/etContraOlvidadaEmail" />

    <EditText
        android:id="@+id/etContraOlvidadaEmail"
        android:layout_width="335dp"
        android:layout_height="47dp"
        android:backgroundTint="?attr/colorPrimary"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOutline"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/btnContraOlvidadaEnviar"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/enviar"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraOlvidadaEmail"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>